fix responsive issue on the first page and text overflow on cards

--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ h1, h2 {
   margin-bottom: 10px;
 }
 
+.card-description {
+  height: 90px;
+  overflow: hidden;
+  bottom: 8px;
+}
+
 .logo {
   color: #0B3B59;
   font-size: 2rem;
